; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_request.c_update_scan.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_request.c_update_scan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_request = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hci_request*, i64)* @update_scan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update_scan(%struct.hci_request* %0, i64 %1) #0 {
  %3 = alloca %struct.hci_request*, align 8
  %4 = alloca i64, align 8
  store %struct.hci_request* %0, %struct.hci_request** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.hci_request*, %struct.hci_request** %3, align 8
  %6 = getelementptr inbounds %struct.hci_request, %struct.hci_request* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @hci_dev_lock(i32 %7)
  %9 = load %struct.hci_request*, %struct.hci_request** %3, align 8
  %10 = call i32 @__hci_req_update_scan(%struct.hci_request* %9)
  %11 = load %struct.hci_request*, %struct.hci_request** %3, align 8
  %12 = getelementptr inbounds %struct.hci_request, %struct.hci_request* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @hci_dev_unlock(i32 %13)
  ret i32 0
}

declare dso_local i32 @hci_dev_lock(i32) #1

declare dso_local i32 @__hci_req_update_scan(%struct.hci_request*) #1

declare dso_local i32 @hci_dev_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
